--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.21.1",
+    "mockjs": "^1.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "sass": "^1.32.5",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "xgplayer": "^2.17.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/mockjs": "^1.0.3",
     "@types/react-router-dom": "^5.1.7",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.18.0",
