--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "mockjs": "^1.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -19,7 +20,8 @@
     "sass": "^1.32.5",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
-    "xgplayer": "^2.17.3"
+    "xgplayer": "^2.17.3",
+    "xgplayer-hls": "^2.3.68"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.11",
     "@types/mockjs": "^1.0.3",
     "@types/react-router-dom": "^5.1.7",
     "babel-eslint": "^10.1.0",
