--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -7,7 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2 
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
 
       - name: Install and Build 🔧 
         run: |
@@ -18,5 +20,6 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          REPOSITORY_NAME: techtrainingcamp-frontend-10/techtrainingcamp-frontend-10.github.io
           BRANCH: gh-pages
           FOLDER: build
