feat(Github Action): Cache npm

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -11,6 +11,14 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: Cache ⚡️
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Install and Build 🔧 
         run: |
           npm ci
