--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sass": "^1.32.5",
+    "swiper": "^6.4.8",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
     "xgplayer": "^2.17.3",
@@ -49,8 +50,10 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
+    "@types/dplayer": "^1.25.1",
     "@types/mockjs": "^1.0.3",
     "@types/react-router-dom": "^5.1.7",
+    "@types/swiper": "^5.4.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.18.0",
     "eslint-config-standard": "^16.0.2",
