--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "antd": "^4.12.3",
+    "antd-img-crop": "^3.13.2",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "mockjs": "^1.1.0",
