--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "antd-img-crop": "^3.13.2",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "dayjs": "^1.10.4",
     "mockjs": "^1.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
     "sass": "^1.32.5",
     "swiper": "^6.4.8",
     "typescript": "^4.0.3",
