feat: live comment

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "emoji-mart": "^3.0.0",
     "mockjs": "^1.1.0",
     "react": "^17.0.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -58,6 +59,7 @@
     "@types/dplayer": "^1.25.1",
     "@types/emoji-mart": "^3.0.4",
     "@types/mockjs": "^1.0.3",
+    "@types/react-addons-css-transition-group": "^15.0.5",
     "@types/react-router-dom": "^5.1.7",
     "@types/swiper": "^5.4.1",
     "babel-eslint": "^10.1.0",
